snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.9-win__src__extensions__pdt__pdtreverse.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.9-win/src/extensions/pdt/pdtreverse.cc",
    ),
    start_line: 1,
    end_line: 59,
    kind: Unit,
    spaces: [],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 5,
            exit_sum: 5,
            total_space_functions: 0,
            exit_min: 5,
            exit_max: 5,
        },
        cognitive: Stats {
            structural: 5,
            structural_sum: 5,
            structural_min: 5,
            structural_max: 5,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: Some(
                    349,
                ),
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 8.0,
            cyclomatic: 8.0,
            n: 1,
            cyclomatic_max: 8.0,
            cyclomatic_min: 8.0,
        },
        halstead: Stats {
            u_operators: 23,
            operators: 123,
            u_operands: 46,
            operands: 86,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 59,
                unit: true,
                sloc_min: 59,
                sloc_max: 59,
            },
            ploc: Ploc {
                lines: {
                    58,
                    55,
                    49,
                    46,
                    43,
                    40,
                    37,
                    34,
                    31,
                    25,
                    22,
                    19,
                    7,
                    53,
                    44,
                    41,
                    38,
                    32,
                    29,
                    26,
                    23,
                    20,
                    17,
                    14,
                    11,
                    8,
                    5,
                    57,
                    51,
                    48,
                    45,
                    36,
                    33,
                    30,
                    27,
                    21,
                    15,
                    12,
                    9,
                },
                ploc_min: 39,
                ploc_max: 39,
            },
            cloc: Cloc {
                only_comment_lines: 4,
                code_comment_lines: 0,
                comment_line_end: Some(
                    3,
                ),
                cloc_min: 4,
                cloc_max: 4,
            },
            lloc: Lloc {
                logical_lines: 25,
                lloc_min: 25,
                lloc_max: 25,
            },
            space_count: 1,
            blank_min: 16,
            blank_max: 16,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 1,
        },
        mi: Stats {
            halstead_length: 209.0,
            halstead_vocabulary: 69.0,
            halstead_volume: 1276.6816114666374,
            cyclomatic: 8.0,
            sloc: 59.0,
            comments_percentage: 0.06779661016949153,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 1,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
